create function parainage and see points
